prepering for language

--- a/templates/accounts/banks/add.html
+++ b/templates/accounts/banks/add.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load static %}
+{% load static i18n custom_tags %}
 {% block title %}Bank qo'shmoq{% endblock %}
 
 
