--- a/templates/accounts/cash.html
+++ b/templates/accounts/cash.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load static %}
+{% load static i18n custom_tags %}
 
 {% block title %}Transaksiyalar{% endblock %}
 
