--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static i18n %}
+{% load static i18n custom_tags %}
 
 <!doctype html>
 <html class="modern fixed has-top-menu has-left-sidebar-half">
