--- a/templates/orders/order_detail.html
+++ b/templates/orders/order_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load static %}
+{% load static i18n %}
 
 {% block title %}{{ object.order_number }}{% endblock %}
 {% block additional_css %}
