--- a/templates/transactions/transaction_add.html
+++ b/templates/transactions/transaction_add.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
-
-{% load static %}
+{% load static i18n %}
 
 {% block title %}Transaksiyalar{% endblock %}
 {% block additional_css %}
