--- a/templates/accounts/banks/add.html
+++ b/templates/accounts/banks/add.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
 {% load static i18n custom_tags %}
-{% block title %}Bank qo'shmoq{% endblock %}
+{% block title %}{% trans "Bank qo'shmoq" %}{% endblock %}
 
 
 {% block content %}
     <header class="page-header page-header-left-inline-breadcrumb">
-        <h2 class="font-weight-bold text-6">Dashboard ></h2>
+        <h2 class="font-weight-bold text-6">{% trans "Dashboard" %} ></h2>
         <div class="right-wrapper">
             <ol class="breadcrumbs">
-                <li><span><a href="{% url 'accounts:money_saver_list' user.id %}">Bank</a></span></li>
-                <li><span>Qo'shish yoki O'zgartirish</span></li>
+                <li><span><a href="{% url 'accounts:money_saver_list' user.id %}">{% trans "Bank" %}</a></span></li>
+                <li><span>{% trans "Qo'shish yoki O'zgartirish" %}</span></li>
             </ol>
         </div>
     </header>
@@ -25,18 +25,18 @@
                         <div class="row">
                             <div class="col-lg-1-5 col-xl-1-5">
                                 <i class="card-big-info-icon bx bx-user"></i>
-                                <h2 class="card-big-info-title">Bank</h2>
-                                <p class="card-big-info-desc">Yangi to'lov operatorini qo'shish</p>
+                                <h2 class="card-big-info-title">{% trans "Bank" %}</h2>
+                                <p class="card-big-info-desc">{% trans "Yangi to'lov operatorini qo'shish" %}</p>
                             </div>
                             <div class="col-lg-3-5 col-xl-4-5">
                                  <div class="form-group row align-items-center pb-3">
-                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Pul turi</label>
+                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">{% trans "Pul turi" %}</label>
                                     <div class="col-lg-7 col-xl-6">
                                         {{ form.cash_type }}
                                     </div>
                                 </div>
                                 <div class="form-group row align-items-center pb-3">
-                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Reester raqami</label>
+                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">{% trans "Reester raqami" %}</label>
                                     <div class="col-lg-7 col-xl-6">
 
                                          {{ form.reester_number }}
@@ -53,12 +53,12 @@
             <div class="col-12 col-md-auto px-md-0 mt-3 mt-md-0">
                 <a href="{% url 'accounts:money_saver_list' user.id %}"
                    class="cancel-button btn btn-light btn-px-4 py-3 border font-weight-semibold text-color-dark text-3">
-                    Orqaga</a>
+                    {% trans "Orqaga" %}</a>
             </div>
             <div class="col-12 col-md-auto ms-md-auto mt-3 mt-md-0 ms-auto">
                 <button type="submit"
                         class=" btn btn-success btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1  ">
-                    <i class="bx bx-save text-4 me-2"></i> Saqlash
+                    <i class="bx bx-save text-4 me-2"></i> {% trans "Saqlash" %}
                 </button>
 
             </div>
