--- a/templates/accounts/banks/delete.html
+++ b/templates/accounts/banks/delete.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
 {% load static i18n custom_tags %}
-{% block title %}Bank o'chirish{% endblock %}
+{% block title %}{% trans "Bank o'chirish" %}{% endblock %}
 
 
 {% block content %}
     <header class="page-header page-header-left-inline-breadcrumb">
-        <h2 class="font-weight-bold text-6">Dashboard ></h2>
+        <h2 class="font-weight-bold text-6">{% trans "Dashboard" %} ></h2>
         <div class="right-wrapper">
             <ol class="breadcrumbs">
-                <li><span>Bank</span></li>
-                <li><span>O'chirish</span></li>
+                <li><span>{% trans "Bank" %}</span></li>
+                <li><span>{% trans "O'chirish" %}</span></li>
             </ol>
         </div>
     </header>
@@ -27,14 +27,13 @@
                         <div class="row">
                             <div class="col-lg-2-5 col-xl-1-5">
                                 <i class="card-big-info-icon bx bx-box"></i>
-                                <h2 class="card-big-info-title">Umumiy ma'lumot</h2>
-                                <p class="card-big-info-desc">To'lov operator haqida to'loq ma'lumot</p>
+                                <h2 class="card-big-info-title">{% trans "Umumiy ma'lumot" %}</h2>
+                                <p class="card-big-info-desc">{% trans "To'lov operator haqida to'loq ma'lumot" %}</p>
                             </div>
 
                             <div class="col-lg-3-5 col-xl-4-5">
                                 <div class="form-group row pb-4">
-                                    <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">Reester
-                                        raqami</label>
+                                    <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">{% trans "Reester raqami" %}</label>
                                     <div class="col-lg-6">
                                         <input type="text" value="{{ object.reester_number }}" id="inputReadOnly"
                                                class="form-control"
@@ -42,8 +41,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group row pb-4">
-                                    <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">To'lov
-                                        turi</label>
+                                    <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">{% trans "To'lov turi" %}</label>
                                     <div class="col-lg-6">
                                         <input type="text" value="{{ object.get_cashType_display }}" id="inputReadOnly"
                                                class="form-control"
@@ -52,7 +50,7 @@
                                 </div>
                                 <div class="form-group row pb-4">
                                     <label class="col-lg-3 control-label text-lg-end pt-2"
-                                           for="inputReadOnly">Korxona</label>
+                                           for="inputReadOnly">{% trans "Korxona" %}</label>
                                     <div class="col-lg-6">
                                         <input type="text" value="{{ object.company }}" id="inputReadOnly"
                                                class="form-control"
@@ -60,8 +58,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group row pb-4">
-                                    <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">Umumiy
-                                        debit</label>
+                                    <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">{% trans "Umumiy debit" %}</label>
                                     <div class="col-lg-6">
                                         <input type="text" value="{{ object.total_debit|floatformat:"2g" }} so'm" id="inputReadOnly"
                                                class="form-control"
@@ -69,8 +66,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group row pb-4">
-                                    <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">Umumiy
-                                        kredit</label>
+                                    <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">{% trans "Umumiy kredit" %}</label>
                                     <div class="col-lg-6">
                                         <input type="text" value="{{ object.total_credit|floatformat:"2g" }} so'm" id="inputReadOnly"
                                                class="form-control"
@@ -79,7 +75,7 @@
                                 </div>
                                 <div class="form-group row pb-4">
                                     <label class="col-lg-3 control-label text-lg-end pt-2"
-                                           for="inputReadOnly">Balans</label>
+                                           for="inputReadOnly">{% trans "Balans" %}</label>
                                     <div class="col-lg-6">
                                         <input type="text" value="{{ object.balance|floatformat:"2g" }} so'm" id="inputReadOnly"
                                                class="form-control"
@@ -99,12 +95,12 @@
             <div class="col-12 col-md-auto px-md-0 mt-3 mt-md-0">
                 <a href="{% url 'accounts:money_saver_list' user.id %}"
                    class="cancel-button btn btn-light btn-px-4 py-3 border font-weight-semibold text-color-dark text-3">
-                    Orqaga</a>
+                    {% trans "Orqaga" %}</a>
             </div>
             <div class="col-12 col-md-auto ms-md-auto mt-3 mt-md-0 ms-auto">
                 <button type="submit"
                         class="delete-button btn btn-danger btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1  modal-basic ">
-                    <i class="bx bx-trash text-4 me-2"></i> O'chirish
+                    <i class="bx bx-trash text-4 me-2"></i> {% trans "O'chirish" %}
                 </button>
             </div>
         </div>
