--- a/templates/accounts/company/detail.html
+++ b/templates/accounts/company/detail.html
@@ -2,7 +2,7 @@
 
 {% load static i18n %}
 
-{% block title %}Mahsulotlar{% endblock %}
+{% block title %}{% trans "Mahsulotlar" %}{% endblock %}
 {% block additional_css %}
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"/>
@@ -19,10 +19,10 @@
 {% block content %}
 
     <header class="page-header page-header-left-inline-breadcrumb">
-        <h2 class="font-weight-bold text-6">Dashboard</h2>
+        <h2 class="font-weight-bold text-6">{% trans "Dashboard" %}</h2>
         <div class="right-wrapper">
             <ol class="breadcrumbs">
-                <li><span>Korxona</span></li>
+                <li><span>{% trans "Korxona" %}</span></li>
             </ol>
 
         </div>
@@ -37,28 +37,26 @@
                         <div class="row">
                             <div class="col-lg-2-5 col-xl-1-5">
                                 <i class="card-big-info-icon bx bx-building"></i>
-                                <h2 class="card-big-info-title">Korxona</h2>
-                                <p class="card-big-info-desc">Korxona nomi, manzili ,telefon raqami, pochta</p>
+                                <h2 class="card-big-info-title">{% trans "Korxona" %}</h2>
+                                <p class="card-big-info-desc">{% trans "Korxona nomi, manzili ,telefon raqami, pochta" %}</p>
                             </div>
 
                             <div class="col-lg-3-5 col-xl-4-5">
                                 <div class="form-group row align-items-center pb-3">
-                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Korxona
-                                        nomi</label>
+                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">{% trans "Korxona nomi" %}</label>
                                     <div class="col-lg-7 col-xl-6">
                                         {{ company.name }}
                                     </div>
                                 </div>
 
                                 <div class="form-group row align-items-center pb-3">
-                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Korxona
-                                        telefon raqam</label>
+                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">{% trans "Korxona telefon raqam" %}</label>
                                     <div class="col-lg-7 col-xl-6">
                                         {{ company.phone }}
                                     </div>
                                 </div>
                                 <div class="form-group row align-items-center pb-3">
-                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Pochta</label>
+                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">{% trans "Pochta" %}</label>
                                     <div class="col-lg-7 col-xl-6">
                                         {{ company.email }}
                                     </div>
@@ -78,30 +76,27 @@
                         <div class="row">
                             <div class="col-lg-2-5 col-xl-1-5">
                                 <i class="card-big-info-icon bx bx-money"></i>
-                                <h2 class="card-big-info-title">Budjet</h2>
-                                <p class="card-big-info-desc">Korxona balansi, debit va kredit</p>
+                                <h2 class="card-big-info-title">{% trans "Budjet" %}</h2>
+                                <p class="card-big-info-desc">{% trans "Korxona balansi, debit va kredit" %}</p>
                             </div>
 
                             <div class="col-lg-3-5 col-xl-4-5">
                                 <div class="form-group row align-items-center pb-3">
-                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Korxona
-                                        balansi</label>
+                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">{% trans "Korxona balansi" %}</label>
                                     <div class="col-lg-7 col-xl-6"><strong>
-                                        {{ company.balance|floatformat:"2g" }} so'm</strong>
+                                        {{ company.balance|floatformat:"2g" }} {% trans "so'm" %}</strong>
                                     </div>
                                 </div>
                                 <div class="form-group row align-items-center pb-3">
-                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Umumiy
-                                        debit</label>
+                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">{% trans "Umumiy debit" %}</label>
                                     <div class="col-lg-7 col-xl-6"><strong>
-                                        {{ company.total_debit|floatformat:"2g" }} so'm</strong>
+                                        {{ company.total_debit|floatformat:"2g" }} {% trans "so'm" %}</strong>
                                     </div>
                                 </div>
                                 <div class="form-group row align-items-center pb-3">
-                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">Umumiy
-                                        kredit</label>
+                                    <label class="col-lg-5 col-xl-3 control-label text-lg-end mb-0">{% trans "Umumiy kredit" %}</label>
                                     <div class="col-lg-7 col-xl-6"><strong>
-                                        {{ company.total_credit|floatformat:"2g" }} so'm</strong>
+                                        {{ company.total_credit|floatformat:"2g" }} {% trans "so'm" %}</strong>
                                     </div>
                                 </div>
 
@@ -121,11 +116,11 @@
                             <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
                         </div>
 
-                        <h2 class="card-title">Manzil</h2>
+                        <h2 class="card-title">{% trans "Manzil" %}</h2>
                     </header>
                     <div class="card-body">
                         {% if company.location.latitude == 1 %}
-                            <h5>Manzil belgilanmagan</h5>
+                            <h5>{% trans "Manzil belgilanmagan" %}</h5>
                         {% else %}
                             <div id="map"></div>
                         {% endif %}
@@ -141,13 +136,13 @@
                             <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
                         </div>
 
-                        <h2 class="card-title">Manzil</h2>
+                        <h2 class="card-title">{% trans "Manzil" %}</h2>
                     </header>
                     <div class="card-body" style="height: 530px;">
 
                         <div class="form-row">
                             <div class="form-group col mb-3">
-                                <label>Manzil</label>
+                                <label>{% trans "Manzil" %}</label>
                                 <div class="date-time-field">
 
                                         <textarea type="text" class="form-control form-control-modern"
@@ -167,7 +162,7 @@
              <div class="col-12 col-md-auto px-md-0 mt-3 mt-md-0">
                 <a href="{% url 'accounts:company_list' user.id  %}"
                    class="cancel-button btn btn-light btn-px-4 py-3 border font-weight-semibold text-color-dark text-3">
-                    Orqaga</a>
+                   {% trans "Orqaga" %}</a>
             </div>
 
         </div>
