--- a/templates/accounts/user/detail.html
+++ b/templates/accounts/user/detail.html
@@ -2,7 +2,7 @@
 
 {% load static i18n %}
 
-{% block title %}Foydalanuvchi{% endblock %}
+{% block title %}{% trans "Foydalanuvchi" %}{% endblock %}
 {% block additional_css %}
 
 
@@ -11,11 +11,11 @@
 {% block content %}
 
     <header class="page-header page-header-left-inline-breadcrumb">
-        <h2 class="font-weight-bold text-6">Dashboard</h2>
+        <h2 class="font-weight-bold text-6">{% trans "Dashboard" %}</h2>
         <div class="right-wrapper">
             <ol class="breadcrumbs">
                 <li><span></span></li>
-                <li><span>Foydalanuvchi</span></li>
+                <li><span>{% trans "Foydalanuvchi" %}</span></li>
 
             </ol>
 
@@ -43,11 +43,11 @@
             <div class="tabs">
                 <ul class="nav nav-tabs tabs-primary">
                     <li class="nav-item active">
-                        <a href="{% url 'accounts:user_detail' user.id %}" class="nav-link">Umumiy ma'lumot
+                        <a href="{% url 'accounts:user_detail' user.id %}" class="nav-link">{% trans "Umumiy ma'lumot" %}
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a href="{% url 'accounts:user_update' user.id %}" class="nav-link">O'zgartirmoq</a>
+                        <a href="{% url 'accounts:user_update' user.id %}" class="nav-link">{% trans "O'zgartirmoq" %}</a>
                     </li>
                 </ul>
                 <div class="tab-content">
@@ -61,7 +61,7 @@
 
 
                                         <div class="form-group row pb-4">
-                                            <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">Username
+                                            <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">{% trans "Username" %}
                                                 </label>
                                             <div class="col-lg-6">
                                                 <input type="text" value="{{ customuser.username }}" id="inputReadOnly"
@@ -69,7 +69,7 @@
                                             </div>
                                         </div>
                                          <div class="form-group row pb-4">
-                                            <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">Ism
+                                            <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">{% trans "Ism" %}
                                                 </label>
                                             <div class="col-lg-6">
                                                 <input type="text" value="{{ customuser.first_name }}" id="inputReadOnly"
@@ -77,7 +77,7 @@
                                             </div>
                                         </div>
                                          <div class="form-group row pb-4">
-                                            <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">Familiya
+                                            <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">{% trans "Familiya" %}
                                                 </label>
                                             <div class="col-lg-6">
                                                 <input type="text" value="{{ customuser.last_name }}" id="inputReadOnly"
@@ -85,7 +85,7 @@
                                             </div>
                                         </div>
                                          <div class="form-group row pb-4">
-                                            <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">Pochta
+                                            <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">{% trans "Pochta" %}
                                                 </label>
                                             <div class="col-lg-6">
                                                 <input type="text" value="{{ customuser.email }}" id="inputReadOnly"
@@ -93,7 +93,7 @@
                                             </div>
                                         </div>
                                          <div class="form-group row pb-4">
-                                            <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">Korxona
+                                            <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">{% trans "Korxona" %}
                                                 </label>
                                             <div class="col-lg-6">
                                                 <input type="text" value="{{ customuser.company }}" id="inputReadOnly"
@@ -101,7 +101,7 @@
                                             </div>
                                         </div>
                                          <div class="form-group row pb-4">
-                                            <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">Rol
+                                            <label class="col-lg-3 control-label text-lg-end pt-2" for="inputReadOnly">{% trans "Rol" %}
                                                 </label>
                                             <div class="col-lg-6">
                                                 <input type="text" value="{{ customuser.role }}" id="inputReadOnly"
