--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
 
     <title>{% block title %}Print{% endblock %}</title>
     <meta name="keywords" content="HTML5 Admin Template"/>
-    <meta name="description" content="Porto Admin - Responsive HTML5 Template">
-    <meta name="author" content="okler.net">
+    <meta name="description" content="Print books with love">
+    <meta name="author" content="print-book.uz">
 
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
