update order detail html

--- a/templates/orders/order_detail.html
+++ b/templates/orders/order_detail.html
@@ -187,7 +187,7 @@
                             <div class="col-auto me-5">
                                 <h3 class="font-weight-bold text-color-dark text-4 mb-3">Mahsulot narxi</h3>
                                 <span class="d-flex align-items-center">
-													1 mahsumot
+													1 mahsulot
 													<i class="fas fa-chevron-right text-color-primary px-3"></i>
 													<b class="text-color-dark text-xxs">{{ order.price|floatformat:"2g" }} so'm</b>
 												</span>
