--- a/templates/orders/order_list.html
+++ b/templates/orders/order_list.html
@@ -58,48 +58,50 @@
                         <tbody>
                         {% for order in order_list %}
                             <tr>
-                                <td>{{ forloop.counter }}</td>
-                                <td><a href="{% url 'orders:order_detail' order.uuid %}">{{ order.order_number }}</a>
-                                </td>
-                                <td>{{ order.created_by.phone }}</td>
-                                <td>{{ order.created_at|date:"d-m-Y H:i" }}</td>
-                                <td>
+                                <form id="order_status_form_{{ order.uuid }}"
+                                      action="{% url 'orders:status_update' order.uuid %}" method="POST">
+                                    {% csrf_token %}
+                                    <td>{{ forloop.counter }}</td>
+                                    <td>
+                                        <a href="{% url 'orders:order_detail' order.uuid %}">{{ order.order_number }}</a>
+                                    </td>
+                                    <td>{{ order.created_by.phone }}</td>
+                                    <td>{{ order.created_at|date:"d-m-Y H:i" }}</td>
+                                    <td>
 
-                                    <select
-                                            class="form-control"
-                                            style="width: 150px" id="order_status_update_select"
-                                    >
-                                        <option value="2" class="badge badge-warning"
-                                                {% if order.order_status == 2 %}selected{% endif %}>
-                                            Yangi Buyurtma
-                                        </option>
-                                        <option value="3" class="badge badge-success"
-                                                {% if order.order_status == 3 %}selected{% endif %}>
-                                            Faol
-                                        </option>
-                                        <option value="4" class="badge badge-danger"
-                                                {% if order.order_status == 4 %}selected{% endif %}>
-                                            Bekor qilingan
-                                        </option>
-                                        <option value="5" class="badge badge-default"
-                                                {% if order.order_status == 5 %}selected{% endif %}>
-                                            Yetqazib berilgan
-                                        </option>
-                                    </select>
-                                <td>{{ order.get_delivery_type_display }}</td>
-                                <td>{{ order.page_number }}</td>
-                                <td>{{ order.price|floatformat:"2g" }} so'm</td>
-                                <td>{{ order.total_credit|floatformat:"2g" }} so'm</td>
-                                <td>
-                                    <form id="order_status_form">
-                                        {% csrf_token %}
-                                        <button class="btn btn-primary" type="submit" id="order_status_update"
-                                                data-action-url="{% url 'orders:status_update' order.uuid %}">
+                                        <select
+                                                class="form-control"
+                                                style="width: 150px" id="order_status_update_select" name="status"
+                                        >
+                                            <option value="2" class="badge badge-warning"
+                                                    {% if order.order_status == 2 %}selected{% endif %}>
+                                                Yangi Buyurtma
+                                            </option>
+                                            <option value="3" class="badge badge-success"
+                                                    {% if order.order_status == 3 %}selected{% endif %}>
+                                                Faol
+                                            </option>
+                                            <option value="4" class="badge badge-danger"
+                                                    {% if order.order_status == 4 %}selected{% endif %}>
+                                                Bekor qilingan
+                                            </option>
+                                            <option value="5" class="badge badge-default"
+                                                    {% if order.order_status == 5 %}selected{% endif %}>
+                                                Yetqazib berilgan
+                                            </option>
+                                        </select>
+                                    <td>{{ order.get_delivery_type_display }}</td>
+                                    <td>{{ order.page_number }}</td>
+                                    <td>{{ order.price|floatformat:"2g" }} so'm</td>
+                                    <td>{{ order.total_credit|floatformat:"2g" }} so'm</td>
+                                    <td>
+
+                                        <button class="btn btn-primary" type="submit">
                                             Saqlash
                                         </button>
-                                    </form>
-                                </td>
 
+                                    </td>
+                                </form>
                             </tr>
                         {% endfor %}
                         </tbody>
@@ -129,43 +131,4 @@
     <script src="{% static 'js/examples/examples.datatables.row.with.details.js' %}"></script>
     <script src="{% static 'js/examples/examples.datatables.tabletools.js' %}"></script>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            let form = document.getElementById("order_status_form");
-
-            if (form) {
-                form.addEventListener("submit", function (event) {
-                    event.preventDefault(); // Prevent the default form submission
-                    let select = document.getElementById("order_status_update_select");
-                    let selectedValue = select.value;
-                    select_status_of_order(selectedValue);
-                });
-            } else {
-                console.error("Form not found");
-            }
-        });
-
-        function select_status_of_order(selectedValue) {
-
-            let actionUrl = document.getElementById("order_status_update").getAttribute("data-action-url");
-            let csrftoken = document.getElementsByName('csrfmiddlewaretoken')[0].value;  // Get CSRF token
-            let form_data = {
-                "status": selectedValue,
-                "csrfmiddlewaretoken": csrftoken,
-            };
-
-            $.ajax({
-                method: "POST",
-                url: actionUrl,
-                data: form_data,
-                dataType: 'json',
-                success: function (data) {
-                    // Handle success if needed
-                },
-                error: function (err) {
-                    console.log(err);
-                }
-            });
-        }
-    </script>
 {% endblock %}
